# cpp_py_proj

./: CMakeLists.txt  README.md  test_integration.py
fastapi_integration/: main.py
integration_lib/: main.cpp
integration_lib/include/: AdaptiveQuadrature.hpp  Include.hpp  MonteCarloIntegration.hpp  NumericalIntegration.hpp  SimpsonsIntegration.hpp  TrapezoidalIntegration.hpp
integration_lib/src/: AdaptiveQuadrature.cpp  MonteCarloIntegration.cpp  SimpsonsIntegration.cpp  TrapezoidalIntegration.cpp
integration_lib/tests/: testAdaptiveQuadratureIntegration.cpp  testMonteCarloIntegration.cpp  testSimpsonsIntegration.cpp  testTrapezoidalIntegration.cpp
python_bindings/: bindings.cpp
